--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.19.1",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/node": "^20.12.13",
     "conventional-changelog-cli": "^5.0.0",
     "eslint": "^9.3.0",
     "lint-staged": "^15.2.5",
+    "rollup": "^4.18.0",
     "simple-git-hooks": "^2.11.1",
     "typescript": "^5.4.5"
   },
