--- a/playgrounds/basic-typescript-demo/package.json
+++ b/playgrounds/basic-typescript-demo/package.json
@@ -1,6 +1,7 @@
 {
   "name": "basic-typescript-demo",
   "type": "module",
+  "private": true,
   "scripts": {
     "dev": "rollup -c rollup.config.js -w",
     "build": "rollup -c rollup.config.js"
