--- a/playgrounds/basic-typescript-demo/package.json
+++ b/playgrounds/basic-typescript-demo/package.json
@@ -5,5 +5,8 @@
   "scripts": {
     "dev": "rollup -c rollup.config.js -w",
     "build": "rollup -c rollup.config.js"
+  },
+  "devDependencies": {
+    "rollup-plugin-ast-explorer": "workspace:*"
   }
 }
