--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,6 +2,9 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
+    "paths": {
+      "rollup-plugin-ast-explorer": ["packages/rollup-plugin-ast-explorer/src/*", "packages/rollup-plugin-ast-explorer/dist/*"]
+    },
     "strict": true,
     "outDir": "dist",
     "esModuleInterop": true,
