--- a/playgrounds/basic-typescript-demo/package.json
+++ b/playgrounds/basic-typescript-demo/package.json
@@ -3,8 +3,8 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "rollup -c rollup.config.js -w",
-    "build": "rollup -c rollup.config.js"
+    "dev": "rimraf dist && rollup -c rollup.config.js -w",
+    "build": "rimraf dist && rollup -c rollup.config.js"
   },
   "devDependencies": {
     "rollup-plugin-ast-explorer": "workspace:*"
