--- a/packages/rollup-plugin-ast-explorer/package.json
+++ b/packages/rollup-plugin-ast-explorer/package.json
@@ -17,11 +17,9 @@
     "url": "https://github.com/younggglcy/rollup-plugin-ast-explorer/issues"
   },
   "keywords": [
-    "rollup",
-    "plugin",
     "rollup-plugin",
     "rollup ast",
-    "ast"
+    "ast explorer"
   ],
   "exports": {
     ".": {
@@ -34,10 +32,43 @@
   "module": "./dist/esm/index.js",
   "types": "./dist/types/index.d.ts",
   "files": [
+    "!dist/**/*.map",
     "dist"
   ],
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
-    "dev": "rimraf dist && rollup -c rollup.config.js -w",
-    "build": "rimraf dist && rollup -c rollup.config.js"
+    "dev": "rimraf dist && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript -w",
+    "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript"
+  },
+  "peerDependencies": {
+    "rollup": "^4"
+  },
+  "peerDependenciesMeta": {
+    "rollup": {
+      "optional": true
+    }
+  },
+  "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
+    "detect-port": "^1.6.1",
+    "h3": "^1.11.1",
+    "picocolors": "^1.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "@rollup/plugin-alias": "^5.1.0",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-replace": "^5.0.7",
+    "@types/debug": "^4.1.12",
+    "@types/detect-port": "^1.3.5",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "debug": "^4.3.5",
+    "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-node-externals": "^7.1.2"
   }
 }
