--- a/packages/rollup-plugin-ast-explorer/tsconfig.json
+++ b/packages/rollup-plugin-ast-explorer/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "jsx": "react-jsx",
-    "lib": ["ESNext"],
+    "lib": ["ESNext", "DOM"],
     "baseUrl": ".",
     "moduleResolution": "Bundler",
     "paths": {
