--- a/package.json
+++ b/package.json
@@ -1,41 +1,90 @@
 {
-  "name": "rollup-plugin-ast-explorer-workspace",
+  "name": "rollup-plugin-ast-explorer",
   "type": "module",
-  "private": true,
+  "version": "0.0.0",
   "packageManager": "pnpm@9.1.4",
+  "description": "Inspect Rollup's AST of each module",
   "author": {
     "name": "younggglcy",
     "email": "younggglcy@gmail.com"
   },
   "license": "MIT",
-  "homepage": "https://github.com/younggglcy/rollup-plugin-ast-explorer",
+  "homepage": "https://github.com/younggglcy/rollup-plugin-ast-explorer/blob/main/README.md",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/younggglcy/rollup-plugin-ast-explorer.git"
   },
+  "bugs": {
+    "url": "https://github.com/younggglcy/rollup-plugin-ast-explorer/issues"
+  },
+  "keywords": [
+    "rollup-plugin",
+    "rollup ast",
+    "ast explorer"
+  ],
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    }
+  },
+  "main": "./dist/esm/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/types/index.d.ts",
+  "files": [
+    "!dist/**/*.map",
+    "dist"
+  ],
   "engines": {
     "node": ">=18.0.0"
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "dev": "pnpm --filter './packages/*' dev",
-    "build": "pnpm --filter './packages/*' build",
-    "test": "echo 'To be done' && exit 0",
+    "dev": "rimraf dist && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript -w",
+    "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
+  },
+  "peerDependenciesMeta": {
+    "rollup": {
+      "optional": true
+    }
+  },
+  "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
+    "crossws": "^0.2.4",
+    "detect-port": "^1.6.1",
+    "h3": "^1.11.1",
+    "jotai": "^2.8.3",
+    "picocolors": "^1.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.19.2",
     "@eslint-react/eslint-plugin": "^1.5.15",
+    "@rollup/plugin-alias": "^5.1.0",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-replace": "^5.0.7",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/debug": "^4.1.12",
+    "@types/detect-port": "^1.3.5",
     "@types/node": "^20.13.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/websocket": "^1.0.10",
     "conventional-changelog-cli": "^5.0.0",
+    "debug": "^4.3.5",
     "eslint": "^9.4.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "lint-staged": "^15.2.5",
     "rimraf": "^5.0.7",
     "rollup": "^4.18.0",
+    "rollup-plugin-dts": "^6.1.1",
     "simple-git-hooks": "^2.11.1",
     "typescript": "^5.4.5"
   },
