--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "postinstall": "npx simple-git-hooks",
+    "postinstall": "simple-git-hooks",
     "dev": "rimraf dist && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript -w",
     "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "lint": "eslint .",
@@ -69,6 +69,7 @@
     "@eslint-react/eslint-plugin": "^1.5.15",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.7",
     "@rollup/plugin-typescript": "^11.1.6",
