--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/debug": "^4.1.12",
     "@types/detect-port": "^1.3.5",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -81,6 +82,7 @@
     "eslint": "^9.4.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "fs-extra": "^11.2.0",
     "lint-staged": "^15.2.6",
     "rimraf": "^5.0.7",
     "rollup": "^4.18.0",
