--- a/package.json
+++ b/package.json
@@ -68,7 +68,6 @@
     "@eslint-react/eslint-plugin": "^1.5.15",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-commonjs": "^26.0.1",
-    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-replace": "^5.0.7",
     "@rollup/plugin-typescript": "^11.1.6",
@@ -78,16 +77,21 @@
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
     "conventional-changelog-cli": "^5.0.0",
     "eslint": "^9.4.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "fs-extra": "^11.2.0",
     "lint-staged": "^15.2.6",
+    "postcss": "^8.4.38",
     "rimraf": "^5.0.7",
     "rollup": "^4.18.0",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-dts": "^6.1.1",
+    "rollup-plugin-postcss": "^4.0.2",
     "simple-git-hooks": "^2.11.1",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   },
   "pnpm": {
