--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,8 @@
     "resolveJsonModule": true,
     "noEmit": true
   },
-  "include": ["./src", "./rollup.config.ts"]
+  "include": [
+    "./src",
+    "./rollup.config.ts"
+  ]
 }
