chore: add DEBUG flag in dev scripts

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "postinstall": "simple-git-hooks",
-    "dev": "rimraf dist && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript -w",
+    "dev": "rimraf dist && DEBUG=rollup-plugin-ast-explorer rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript -w",
     "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "lint": "eslint . --max-warnings 0",
     "lint:fix": "pnpm lint --fix"
