--- a/playgrounds/basic-typescript-demo/package.json
+++ b/playgrounds/basic-typescript-demo/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "rimraf dist && rollup -c rollup.config.js -w",
+    "dev": "rimraf dist && DEBUG=rollup-plugin-ast-explorer rollup -c rollup.config.js -w",
     "build": "rimraf dist && rollup -c rollup.config.js"
   },
   "devDependencies": {
