--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "rollup-plugin-ast-explorer",
+  "name": "@rollup-plugin-ast-explorer/workspace",
   "type": "module",
-  "version": "0.0.0",
-  "packageManager": "pnpm@9.15.9",
-  "description": "Inspect Rollup's AST of each module",
+  "private": "true",
+  "packageManager": "pnpm@10.7.0",
   "author": {
     "name": "younggglcy",
     "email": "younggglcy@gmail.com"
   },
-  "license": "MIT",
-  "homepage": "https://github.com/younggglcy/rollup-plugin-ast-explorer/blob/main/README.md",
+  "workspaces": [
+    "packages/*",
+    "playgrounds/*"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/younggglcy/rollup-plugin-ast-explorer.git"
@@ -17,88 +18,59 @@
   "bugs": {
     "url": "https://github.com/younggglcy/rollup-plugin-ast-explorer/issues"
   },
-  "keywords": [
-    "rollup-plugin",
-    "rollup ast",
-    "ast explorer"
-  ],
-  "exports": {
-    ".": {
-      "types": "./dist/types/index.d.ts",
-      "import": "./dist/esm/index.js"
-    }
-  },
-  "main": "./dist/esm/index.js",
-  "module": "./dist/esm/index.js",
-  "types": "./dist/types/index.d.ts",
-  "files": [
-    "!dist/**/*.map",
-    "dist"
-  ],
   "engines": {
     "node": ">=18.0.0"
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "postinstall": "simple-git-hooks",
-    "dev": "rimraf dist && DEBUG=rollup-plugin-ast-explorer rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript -w",
-    "build": "rimraf dist && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "dev": "pnpm --parallel --filter './packages/*' dev",
+    "build": "pnpm --parallel --filter './packages/*' build",
     "lint": "eslint . --max-warnings 0",
-    "lint:fix": "pnpm lint --fix"
-  },
-  "peerDependencies": {
-    "rollup": "^4.0.0"
-  },
-  "peerDependenciesMeta": {
-    "rollup": {
-      "optional": true
-    }
-  },
-  "dependencies": {
-    "@monaco-editor/react": "^4.7.0",
-    "debug": "^4.4.0",
-    "detect-port": "^1.6.1",
-    "h3": "^1.15.1",
-    "jotai": "^2.12.2",
-    "picocolors": "^1.1.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "rxjs": "^7.8.2"
+    "lint:fix": "pnpm lint --fix",
+    "prepublish": "pnpm build",
+    "publish": "pnpm bumpp && pnpm -r publish --access public --no-git-checks"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.27.3",
-    "@eslint-react/eslint-plugin": "^1.37.0",
+    "@antfu/eslint-config": "^4.11.0",
+    "@eslint-react/eslint-plugin": "^1.38.4",
+    "@rollup-plugin-ast-explorer/rollup-config-common": "workspace:*",
     "@rollup/plugin-alias": "^5.1.1",
-    "@rollup/plugin-commonjs": "^26.0.3",
-    "@rollup/plugin-node-resolve": "^15.3.1",
-    "@rollup/plugin-replace": "^5.0.7",
-    "@rollup/plugin-typescript": "^11.1.6",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-replace": "^6.0.2",
+    "@rollup/plugin-typescript": "^12.1.2",
     "@types/debug": "^4.1.12",
     "@types/detect-port": "^1.3.5",
     "@types/fs-extra": "^11.0.4",
-    "@types/node": "^20.17.24",
-    "@types/react": "^18.3.19",
-    "@types/react-dom": "^18.3.5",
-    "autoprefixer": "^10.4.21",
+    "@types/node": "^22.13.14",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
+    "bumpp": "^10.1.0",
     "conventional-changelog-cli": "^5.0.0",
     "eslint": "^9.22.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "fs-extra": "^11.3.0",
     "lint-staged": "^15.5.0",
-    "postcss": "^8.5.3",
-    "rimraf": "^6.0.1",
+    "rollup": "^4.38.0",
+    "rollup-plugin-ast-explorer": "workspace:*",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-dts": "^6.2.0",
+    "rollup-plugin-node-externals": "^8.0.0",
     "rollup-plugin-postcss": "^4.0.2",
     "simple-git-hooks": "^2.12.1",
-    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.2"
   },
   "pnpm": {
     "overrides": {
+      "@rollup-plugin-ast-explorer/rollup-config-common": "workspace:*",
       "rollup-plugin-ast-explorer": "workspace:*"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "simple-git-hooks"
+    ]
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged"
