feat: intergrate workspace, tweak codes structure, change package folder name

--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "@rollup/plugin-replace": "^6.0.2",
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/debug": "^4.1.12",
-    "@types/detect-port": "^2.0.0",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.14.0",
     "@types/react": "^19.1.0",
@@ -52,6 +51,7 @@
     "eslint": "^9.24.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "fast-glob": "^3.3.3",
     "fs-extra": "^11.3.0",
     "lint-staged": "^15.5.0",
     "rollup": "^4.39.0",
