--- a/packages/rollup-plugin-ast-explorer/package.json
+++ b/packages/rollup-plugin-ast-explorer/package.json
@@ -55,13 +55,13 @@
     "debug": "^4.4.0",
     "detect-port": "^2.1.0",
     "h3": "^1.15.1",
-    "jotai": "^2.12.2",
     "picocolors": "^1.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.3",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.3",
