--- a/packages/rollup-plugin-ast-explorer/package.json
+++ b/packages/rollup-plugin-ast-explorer/package.json
@@ -61,9 +61,20 @@
     "rxjs": "^7.8.2"
   },
   "devDependencies": {
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-toggle": "^1.1.10",
+    "@radix-ui/react-toggle-group": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/postcss": "^4.1.14",
     "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
+    "monaco-editor": "^0.55.1",
     "postcss": "^8.5.6",
+    "react-resizable-panels": "^4.2.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.9.3"
   },
